--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -75,6 +75,7 @@ body {
   color: var(--text-color);
   transition: background .4s;
   /* for dark mode animation */
+
 }
 
 /* title animation */
@@ -197,13 +198,13 @@ body {
   }
 }
 
-/* h1,
+h1,
 h2,
 h3 {
   color: var(--title-color);
   font-family: var(--title-font);
   font-weight: var(--font-medium);
-} */
+}
 
 ul {
   list-style: none;
@@ -256,6 +257,26 @@ body.dark-theme {
 .dark-theme .qualification__img,
 .dark-theme .testimonial__img {
   filter: invert(1);
+}
+
+.dark-theme .home__social-link {
+  color: var(--title-color);
+}
+
+.dark-theme .section__border {
+  border-bottom: 1px solid hsl(207, 40%, 32%);
+}
+
+.dark-theme::-webkit-scrollbar {
+  background-color: hsl(207, 40%, 15%);
+}
+
+.dark-theme::-webkit-scrollbar-thumb {
+  background-color: hsl(207, 40%, 25%);
+}
+
+.dark-theme::-webkit-scrollbar-thumb::hover {
+  background-color: hsl(207, 4%, 35%);
 }
 
 .dark-theme .contact__data-info,
@@ -324,6 +345,8 @@ body.dark-theme {
   box-shadow: 0 4px 20px hsla(207, 24%, 35%, .1);
   padding-inline: 1.5rem;
   border-radius: 3rem;
+  transition: background .4s;
+  /* for dark mode animation */
 }
 
 .nav__logo,
@@ -429,6 +452,8 @@ body.dark-theme {
   justify-self: center;
   border-radius: 100%;
   place-items: center;
+  transition: background .4s;
+  /* for dark mode animation */
 }
 
 .home__perfil {
@@ -553,6 +578,8 @@ body.dark-theme {
   border-radius: 3rem;
   place-items: center;
   margin-bottom: 1rem;
+  transition: background .4s;
+  /* for dark mode animation */
 }
 
 .skills__blog img {
@@ -663,6 +690,8 @@ body.dark-theme {
   text-align: center;
   padding: 3.5rem 1rem;
   border-radius: 7.45rem;
+  transition: background .4s;
+  /* for dark mode animation */
 }
 
 .services__card i {
@@ -1000,6 +1029,8 @@ body.dark-theme {
   font-weight: var(--font-medium);
   padding: .35rem;
   border-radius: .75rem;
+  transition: background .4s;
+  /* for dark mode animation */
 }
 
 .contact__form-area {
@@ -1138,9 +1169,117 @@ body.dark-theme {
 
 /*=============== BREAKPOINTS ===============*/
 /* For small devices */
+@media screen and (max-width: 240px) {
+  .container {
+    margin-inline: 1rem;
+  }
 
+  .nav__menu {
+    padding-bottom: 4rem;
+  }
+
+  .nav__list {
+    gap: 1rem 1.25rem;
+  }
+
+  .skills__info {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .projects__img {
+    width: 200px;
+    justify-self: center;
+  }
+}
 
 /* For medium devices */
+@media screen and (max-width: 576px) {
 
+  .nav,
+  .nav__menu {
+    width: 380px;
+  }
+
+  .nav {
+    margin: 0 auto;
+  }
+
+  .skills__container {
+    justify-content: center;
+  }
+
+  .projects__container,
+  .hobbies__container {
+    width: 400px;
+  }
+
+  .projects__container {
+    overflow: hidden;
+  }
+
+  .projects__container .swiper-button-prev {
+    left: 1rem;
+  }
+
+  .projects__container .swiper-button-next {
+    right: 1rem;
+  }
+}
+
+@media screen and (min-width: 767px) {
+  .home__container {
+    grid-template-columns: 1fr 2fr 1fr;
+  }
+
+  .home__data {
+    order: 2;
+  }
+
+  .home__info:nth-child(3) {
+    order: 3;
+    text-align: right;
+  }
+
+  .home__info {
+    margin-top: 10rem;
+  }
+
+  .home__info-description {
+    padding-right: 0;
+  }
+
+  .skills__container,
+  .qualification__container,
+  .services__container,
+  .contact__container {
+    grid-template-columns: repeat(2, max-content);
+  }
+
+  .skills__container,
+  .services__container {
+    column-gap: 5rem;
+  }
+
+  .services__container {
+    justify-content: center;
+  }
+
+  .qualification__container {
+    justify-content: center;
+  }
+
+  .projects__container {
+    width: 500px;
+  }
+
+  .contact__form {
+    width: 360px;
+  }
+
+  .contact__container {
+    justify-content: center;
+    column-gap: 8rem;
+  }
+}
 
 /* For large devices */
