--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -198,13 +198,13 @@ body {
   }
 }
 
-h1,
+/* h1,
 h2,
 h3 {
   color: var(--title-color);
   font-family: var(--title-font);
   font-weight: var(--font-medium);
-}
+} */
 
 ul {
   list-style: none;
@@ -447,7 +447,7 @@ body.dark-theme {
   position: relative;
   /* width: 200px; */
   /* height: 290px; */
-  background-color: var(--body-color);
+  /* background-color: var(--body-color); */
   /* border: 2px solid var(--text-color-light); */
   justify-self: center;
   border-radius: 100%;
@@ -559,6 +559,7 @@ body.dark-theme {
 .skills__data,
 .skills__blog {
   display: grid;
+  justify-items: center;
 }
 
 .skills__info {
@@ -1169,7 +1170,7 @@ body.dark-theme {
 
 /*=============== BREAKPOINTS ===============*/
 /* For small devices */
-@media screen and (max-width: 240px) {
+@media screen and (max-width: 340px) {
   .container {
     margin-inline: 1rem;
   }
@@ -1190,10 +1191,19 @@ body.dark-theme {
     width: 200px;
     justify-self: center;
   }
+
+  .hobbies__container{
+  display: flex;
 }
 
-/* For medium devices */
-@media screen and (max-width: 576px) {
+.hobbies__info {
+  display: flex;
+  flex-direction: column;
+}
+}
+
+/* For medium devices  */
+@media screen and (min-width: 576px) {
 
   .nav,
   .nav__menu {
@@ -1208,8 +1218,7 @@ body.dark-theme {
     justify-content: center;
   }
 
-  .projects__container,
-  .hobbies__container {
+  .projects__container {
     width: 400px;
   }
 
@@ -1266,10 +1275,12 @@ body.dark-theme {
 
   .qualification__container {
     justify-content: center;
+    column-gap: 10rem;
   }
 
   .projects__container {
     width: 500px;
+
   }
 
   .contact__form {
@@ -1282,4 +1293,126 @@ body.dark-theme {
   }
 }
 
+
 /* For large devices */
+@media screen and (min-width: 1023px) {
+  .header {
+    top: 0;
+    bottom: initial;
+    background-color: var(--body-color);
+    transition: .4;
+  }
+
+  .nav {
+    width: initial;
+    height: calc(var(--header-height) + 1.5rem);
+    box-shadow: none;
+    border-radius: 0;
+    column-gap: 3rem;
+    margin-inline: 1.5rem;
+    padding: 0;
+  }
+
+  .nav__link i,
+  .nav__toggle,
+  .nav__close {
+    display: none;
+  }
+
+  .nav__menu {
+    width: initial;
+    margin-left: auto;
+    background-color: var(--body-color);
+    transition: background .4s;
+  }
+
+  .nav__list {
+    display: flex;
+    column-gap: 3rem;
+  }
+
+  .nav__link {
+    font-size: var(--normal-font-size);
+  }
+
+  .dark-theme .nav,
+  .dark-theme .nav__menu {
+    background-color: var(--body-color);
+    box-shadow: none;
+  }
+
+  .change-theme {
+    color: var(--text-color-light);
+  }
+
+  .change-theme:hover {
+    color: var(--title-color);
+  }
+
+  .section {
+    padding-block: 8rem 0;
+  }
+
+  .home__title {
+    font-size: 2.25rem;
+  }
+
+  .scrollup {
+    right: 3rem;
+  }
+
+  .show-scroll {
+    bottom: 5rem;
+  }
+
+  /* Change background header */
+  .bg-header {
+    box-shadow: 0 4px 20px hsl(207, 24%, 35%, .1);
+  }
+
+  .dark-theme .bg-header {
+    box-shadow: 0 6px 24px hsl(207, 24%, 8%, .6);
+  }
+}
+
+@media screen and (min-width: 1048px) {
+  .container {
+    margin-inline: auto;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .section__border {
+    padding-bottom: 6rem;
+  }
+
+  .section__subtitle {
+    margin-bottom: 5rem;
+  }
+
+  .home__title {
+    font-size: var(--biggest-font-size);
+  }
+
+  .home__blog {
+    width: 100%;
+    /* height: none; */
+    border-radius: 100%;
+  }
+
+  .home__perfil {
+    width: 340px;
+    height: 520px;
+    border-radius: 10.6rem;
+  }
+
+  .home__perfil img {
+    width: 300px;
+  }
+
+  .home__shape-wawes {
+    width: 100px;
+    left: -4rem;
+    top: 10rem;
+  }
+}
